--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,6 @@
 
 .linksStyles {   
-    color: rgb(131, 130, 130);
+    color: #3b3e40;
     margin: 20px;
     text-decoration: none;
     font-size: large;
@@ -8,15 +8,37 @@
     cursor: pointer;
 }
 
+.colores{
+    color: #a61a16;
+    color: #80858d;
+    color: #3b3e40;
+    color: #1d1d1b;
+    color: #f2f2f2;
+}
+
 .linksStyles:hover {
-    color: red;
+    color: #a61a16;
     font-weight: 600;
 }
 
 .divGeneral{
-    background-color: white;
+    background-color: #f2f2f2;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+
+.button{
+    background-color: #3b3e40;
+    color: #f2f2f2;
+    padding: 5px;
+    margin: 20px;
+    font-size: large;
+    font-weight: 500;
+    border-radius: 10px;
+}
+
+.button:hover{
+    background-color: #a61a16;
 }
