--- a/client/src/components/Proyectos/Proyectos.module.css
+++ b/client/src/components/Proyectos/Proyectos.module.css
@@ -42,7 +42,7 @@
   overflow: hidden;
 }
 
-
+/* 
 ul,
 li {
   list-style: none;
@@ -55,7 +55,7 @@ li {
 
 img {
   margin-top: -16px;
-}
+} */
 
 
 .dotsContainer {
