--- a/client/src/components/Servicios/Servicios.module.css
+++ b/client/src/components/Servicios/Servicios.module.css
@@ -10,3 +10,52 @@
     padding: 10px;
     border: 1.5px solid #3b3e40;
 }
+
+.imagenesRemodelacion{
+    width: 100px;
+    margin: 2px;
+    border-radius: 20px;
+    border: 1.5px solid #a61a16;
+}
+
+.imagenesAcabados{
+    width: 200px;
+    margin: 2px;
+    border-radius: 20px;
+    border: 1.5px solid #a61a16;
+}
+
+.imagenConstruccion{
+    width: 200px;
+    margin: 2px;
+    border-radius: 20px;
+    border: 1.5px solid #a61a16;
+}
+
+.imagenCarpinteria{
+    width: 200px;
+    margin: 2px;
+    border-radius: 20px;
+    border: 1.5px solid #a61a16;
+}
+
+.textoAntes{
+    color: #f2f2f2;
+    background-color: #a61a16;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 0px 20px 0px 20px;
+    font-size: 12px;
+}
+
+.textoAntes2{
+    position: absolute;
+    
+    transform: translate(150%, 150%); /* Centra el texto completamente */
+    color: #f2f2f2;
+    background-color: #a61a16;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 0px 20px 0px 20px;
+    font-size: 12px;
+}
