--- a/client/src/components/Servicios/Servicios.module.css
+++ b/client/src/components/Servicios/Servicios.module.css
@@ -8,35 +8,36 @@
     background-color: #80858d;
     border-radius: 30px;
     padding: 10px;
-    border: 1.5px solid #3b3e40;
+    border: 1.5px solid #1d1d1b;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
 }
 
 .imagenesRemodelacion{
     width: 100px;
     margin: 2px;
     border-radius: 20px;
-    border: 1.5px solid #a61a16;
+    border: 1.5px solid #1d1d1b;
 }
 
 .imagenesAcabados{
     width: 200px;
     margin: 2px;
     border-radius: 20px;
-    border: 1.5px solid #a61a16;
+    border: 1.5px solid #1d1d1b; 
 }
 
 .imagenConstruccion{
     width: 200px;
     margin: 2px;
     border-radius: 20px;
-    border: 1.5px solid #a61a16;
+    border: 1.5px solid #1d1d1b;
 }
 
 .imagenCarpinteria{
     width: 200px;
     margin: 2px;
     border-radius: 20px;
-    border: 1.5px solid #a61a16;
+    border: 1.5px solid #1d1d1b;
 }
 
 .textoAntes{
@@ -48,14 +49,12 @@
     font-size: 12px;
 }
 
-.textoAntes2{
-    position: absolute;
-    
-    transform: translate(150%, 150%); /* Centra el texto completamente */
+.textoMobible{
+    position: absolute;  
+    transform: translate(155%, 40%);
     color: #f2f2f2;
     background-color: #a61a16;
     border-radius: 5px;
-    padding: 2px;
-    margin: 0px 20px 0px 20px;
+    padding: 2px 10px 2px 10px;
     font-size: 12px;
 }
