--- a/client/src/components/Servicios/Servicios.module.css
+++ b/client/src/components/Servicios/Servicios.module.css
@@ -6,6 +6,7 @@
     width: 250px;
     margin: 20px;
     background-color: #80858d;
+    background-color: #721f1c;
     border-radius: 30px;
     padding: 10px;
     border: 1.5px solid #1d1d1b;
@@ -43,6 +44,7 @@
 .textoAntes{
     color: #f2f2f2;
     background-color: #a61a16;
+    background-color: #1d1d1b;
     border-radius: 5px;
     padding: 2px;
     margin: 0px 20px 0px 20px;
@@ -54,6 +56,7 @@
     transform: translate(155%, 40%);
     color: #f2f2f2;
     background-color: #a61a16;
+    background-color: #1d1d1b;
     border-radius: 5px;
     padding: 2px 10px 2px 10px;
     font-size: 12px;
