--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,39 +1,55 @@
 
-.sliderBox{
-  overflow: hidden;
-}
-
-.sliderBox ul{
-    display: flex;
-    padding: 0px;
-    width: 400%;
-    animation: slide 20s infinite alternate ease-in-out;
-}
-
-.sliderBox li{
-    width: 100%;
-    list-style: none;
+.swiperPrincipal{
+    height: 90vh;
     position: relative;
 }
 
-.texto{
+.slide1{
+    background-image: url('https://cloudfront-us-east-1.images.arcpublishing.com/elfinanciero/57KLK7PBOQ5A2CCARYKYEAMSQA.jpg');
+    background-size: cover; 
+}
+
+.slide2{
+    background-image: url('https://client-setting-co-institucional-images.s3.amazonaws.com/credito_para_remodelar_vivienda_f2f5661138.jpg');
+    background-size: cover;
+}
+
+.slide3{
+    background-image: url('https://cloudfront-us-east-1.images.arcpublishing.com/elfinanciero/57KLK7PBOQ5A2CCARYKYEAMSQA.jpg');
+    background-size: cover;
+}
+
+.slide4{
+    background-image: url('https://client-setting-co-institucional-images.s3.amazonaws.com/credito_para_remodelar_vivienda_f2f5661138.jpg');
+    background-size: cover;
+}
+
+.container{
+    margin-top: 30%;
+    display: flex;  
+    justify-content: center;    
+    font-size: 3rem;
+}
+
+    @media(max-width: 768px){
+        .container{
+            margin-top: 60%;
+        }
+    }
+
+.contactoDiv{
     position: absolute;
-    text-align: center;
-    padding: 0 250px;
-    top: 250px;
-    color: white;
+    display: flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35rem, 19rem);
+    z-index: 2; 
+    text-decoration: none;
 }
 
-@keyframes slide {
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
-
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-
-    75% {margin-left: -300%;}
-    100% {margin-left: -300%;}
-}
+    @media(max-width: 768px){
+        .contactoDiv{
+            transform: translate(-10rem, 18rem);
+        }
+    }
