--- a/client/src/components/SobreNosotros/SobreNosotros.module.css
+++ b/client/src/components/SobreNosotros/SobreNosotros.module.css
@@ -19,6 +19,13 @@
     z-index: 1;
 }
 
+    @media(max-width: 768px){
+        .flippableCardContainer{
+            margin: 20px 10px 20px 10px ;
+            width: 100%;
+        }
+    }
+
 .frontCard{
     display: flex;
     flex-direction: column;
@@ -68,3 +75,15 @@
     border-radius: 15px; 
     filter: opacity(0.4);
 }
+
+.misVis{
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+}
+
+    @media(max-width: 768px){
+        .misVis{
+            flex-direction: column;
+        }
+    }
