--- a/client/src/components/ApartamentoCard/ApartamentoCard.module.css
+++ b/client/src/components/ApartamentoCard/ApartamentoCard.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     width: 300px;
     height: 350px;
-    background-color: #80858d;
+    background-color: #3b3e40;
     color: #f2f2f2;
     border-radius: 10px;
     margin: 20px;
